finished weather api project with no backend tho time for react

--- a/WeatherApp/index.html
+++ b/WeatherApp/index.html
@@ -1,5 +1,19 @@
 <!DOCTYPE html>
 <head>
     <title>Weather App Project</title>
-    <link rel="style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
+<body>
+    <form class="weatherForm">
+    <input type="text" class="cityInput" placeholder="Enter City">
+    <button type="submit">Get Weather</button>
+    </form>
+
+    <div class="card" style="display:none">
+    </div>
+
+    <script src="index.js"></script>
+
+
+</body>
+
